# GPU-samples

./: .gitignore  README.md
BinarySearch/: .gitignore  README.md  automate-benchmarking.sh  benchmarking-cpu.py  benchmarking-cpu.sh  binarysearch.c  binarysearch.cu  cpu-bs
BinarySearch/gtx960-kerneldata/: README.md
BinarySearch/machine-learning/: README.md  analyze.py  binarytree.c  binarytree.h  clean.py  dnn.py  num_iters.txt  numiter  numiterations.c  numiterations.cu  obtain-speedup.py  p_cells.txt  parse-cpu.py  parse-cpu_raw.py  project.gv  randomforest.py
BinarySearch/test/: getCell.cu  testInitialize.cu  tgc
BookWork/: README.md
InnerProduct/: .gitignore  README.md  inner.cu
MatrixMultiply/: .gitignore  README.md
MatrixMultiply/benchmarking/: README.md  benchmark-cpu.py  benchmark-gpu.py
MatrixMultiply/data/: benchmarking-data
MatrixMultiply/debug/: test_malloc_managed
MatrixMultiply/include/: README.md  matmul.cu  matmul.h
MatrixMultiply/src/: CMakeLists.txt  README.md  main.cu  matmul.cpp  matmul.cu
MatrixMultiply/test/: README.md  problem_size.py  val_mm  validate_matmul.cu
MiscAlgorithms/: README.md
MiscAlgorithms/BinarySearch/: README.md  binarysearch-validate.cu  binarysearch.c  binarysearch.cu
MiscAlgorithms/InnerProduct/: README.md  inner.cu
MiscAlgorithms/MatrixMultiply/: .gitignore
MiscAlgorithms/MatrixMultiply/src/: CMakeLists.txt  README.md  matmul.cpp  matmul.cu
MiscAlgorithms/TensorMultiply/: .gitignore
ParticleDNS-3D3V/: README.md  lienardWiechert.cu
TensorMultiply/: .gitignore  README.md
TensorMultiply/include/: tensmult.cu  tensmult.cuh
TensorMultiply/src/: main.cu  tensmult.cpp  tensmult.cu
TensorMultiply/test/: CMakeLists.txt  validate.cu
Transpose/: README.md
sparseMatrix/: README.md
sparseMatrix/include/: README.md  initCSR.cu  initCSR.cuh  spGEMM.cu  sparseMatrix.cuh
sparseMatrix/src/: main.cu
spmm-butterfly/include/: README.md  initCSR.cu  initCSR.cuh  spGEMM.cu  spGEMM.cuh  sparseMatrix.cuh
spmm-butterfly/src/: CMakeLists.txt  README.md
(+10744 files in other folders)
